# Labs

./: .gitignore  Lab2.ipynb  README.md  build.sh  requirements.txt
Lab2/: .gitignore  Lab2.ipynb  README.md  requirements.txt
Lab3/: .gitignore  Lab3.ipynb  README.md  requirements.txt
Lab4/: .gitignore  Lab4.ipynb  README.md  requirements.txt
Lab5/: .gitignore  README.md  app.py  requirements.txt
Lab6/: CMakeLists.txt  Readme.md  preinstall.sh  run.sh
Lab6/include/: FrameProcessor.hpp  KeyProcessor.hpp
Lab6/src/: FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
Lab7/: .gitignore  CMakeLists.txt  Readme.md  preinstall.sh
Lab7/include/: FaceDetector.hpp  FrameProcessor.hpp
Lab7/src/: CameraProvider.cpp  FaceDetector.cpp  FrameProcessor.cpp
include/: CameraProvider.hpp  Display.hpp  KeyProcessor.hpp
src/: Display.cpp  KeyProcessor.cpp  main.cpp
